[package]
name = "rs-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# actix-web = "4"
# flate2 = "1.0.27"
# base64 = "0.21.3"
# snap = "1"

futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "*", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"
tower-http={version = "*", features = ["full"]}
tower={version = "*", features = ["full"]}
http = "0.2"

async-std = { version = "1", features = ["attributes", "tokio1"] }
